[package]
name = "must_in_rust"
version = "0.1.0"
edition = "2021"


[dependencies]

rand = "0.8.5"
hex = "0.4.3"

#Handling packets
pcap = "1.1.0"
tokio = "1.34.0"
etherparse = "0.13"

#Handling Compressions
rle = "0.2.0"
lzw-compress = "1.0.0"
simple_huffman = "0.1.3"

#Handling jsons
json = "0.12.4"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

#Handling Encryptions
aes = "0.8.3"
aes-gcm = "0.10.3"
cipher = "0.4.4"
aes-gcm-siv = "0.11.1"
rsa = "0.9.6"
ctr = "0.9.2"
cbc = { version = "0.1.2", features = ["alloc"] }
