[package]
name = "must_in_rust"
version = "0.1.0"
edition = "2021"


[dependencies]

rand = "0.8.5"
hex = "0.4.3"
pcap = { version = "1.2.0", features = ["capture-stream"]}
tokio = { version = "1.34.0", features = ["rt", "rt-multi-thread", "macros"] }
etherparse = "0.14.2"
num_enum = "0.7.2"

#Handling Compressions
rle = "0.2.0"

#Handling jsons
json = "0.12.4"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"

#Handling Encryptions
aes = "0.8.3"
aes-gcm = "0.10.3"
cipher = "0.4.4"
aes-gcm-siv = "0.11.1"
rsa = {version = "0.9.6", features = ["sha2"] }
ctr = "0.9.2"
cbc = { version = "0.1.2", features = ["alloc"] }

#web-api
actix-web = { version = "4.4.1", features = ["macros"] }
actix-cors = "0.7.0"
env_logger = "0.11.0"
flate2 = "1.0.28"
bincode = "1.3.3"
chrono = "0.4.34"
lazy_static = "1.4.0"

pem = "3.0.3"
mongodb = "2.8.1"

actix-rt = "2.9.0"
once_cell = "1.19.0"
futures = "0.3.30"

signal-hook = "0.3.17"
ctrlc = "3.4.2"

[profile.dev.package.num-bigint-dig]
opt-level = 3
